# dxcompress

./: .gitignore  .travis.yml  LICENSE  Makefile.in  README.md  algorithm.h  autogen.sh  compress.1  configure.ac  deflate.c  lzw.c  lzw.h  main.c  make-wrappers.sh  test-compress.sh  uncompress.in  xz.c  zcat.in
.github/workflows/: main.yml
m4/: check-cflags.m4  pkg-config.m4  wrappers.m4
